<resources>
    <string name="app_name">Notexrate</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="currency">EUR-BRL</string>
    <string name="amount">5,15264</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="min_value_alert">Min. value alert</string>
    <string name="max_value_alert">Max. value alert</string>
</resources>
